--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
     </style>
     <script>
         function redirectTo(path) {
-            const baseUrl = "https://mathpunch.github.io/";
-            window.open(baseUrl + path, '_self');
+            const baseUrl = "https://tubular-flan-b39eaf.netlify.app/";
+            window.location.href = baseUrl + path;
         }
     </script>
 </head>
@@ -89,30 +89,30 @@
         <button onclick="redirectTo('monkey/');">Trash Truck Simulator</button>
 
         <h2>Games For Emulator JS</h2>
-        <button onclick="window.open('https://github.com/ixlmathgg/flashy/raw/main/Mario%20Kart.zip', '_self');">DS: Mario Kart</button>
-        <button onclick="window.open('https://github.com/ixlmathgg/Licky/raw/main/Pokemon%20Red%20Fire.zip', '_self');">GBA: Pokémon Red Fire</button>
-        <button onclick="window.open('https://github.com/mathpunch/didactic-fortnight/raw/refs/heads/main/LEGO%20Star%20Wars%20II.zip', '_self');">GBA: Lego Star Wars II</button>
+        <button onclick="window.location.href='https://github.com/ixlmathgg/flashy/raw/main/Mario%20Kart.zip';">DS: Mario Kart</button>
+        <button onclick="window.location.href='https://github.com/ixlmathgg/Licky/raw/main/Pokemon%20Red%20Fire.zip';">GBA: Pokémon Red Fire</button>
+        <button onclick="window.location.href='https://github.com/mathpunch/didactic-fortnight/raw/refs/heads/main/LEGO%20Star%20Wars%20II.zip';">GBA: Lego Star Wars II</button>
 
         <h2>MathPunch AI</h2>
         <button onclick="redirectTo('crab/');">Click Me</button>
 
         <h2>Games Requests</h2>
-        <button onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSc6PG1pB-SmSDqf_gJ_DYWV5HWFtGCcWpgGf2EaS0EpKcICqQ/viewform?usp=sf_link', '_self');">Click Me</button>
+        <button onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLSc6PG1pB-SmSDqf_gJ_DYWV5HWFtGCcWpgGf2EaS0EpKcICqQ/viewform?usp=sf_link';">Click Me</button>
 
         <h2>Adblocker</h2>
-        <button onclick="window.open('https://www.icloud.com/shortcuts/60f5af18cbfe435f886450e6a4c332e5', '_self');">Click Me</button>
+        <button onclick="window.location.href='https://www.icloud.com/shortcuts/60f5af18cbfe435f886450e6a4c332e5';">Click Me</button>
 
         <h2>Chatting</h2>
-        <button onclick="window.open('https://sites.google.com/view/mathpunch', '_self');">Click Me</button>
+        <button onclick="window.location.href='https://sites.google.com/view/mathpunch';">Click Me</button>
 
         <h2>Backup Links</h2>
-        <button onclick="window.open('https://extramath.github.io/', '_self');">Click Me</button>
+        <button onclick="window.location.href='https://extramath.github.io/';">Click Me</button>
 
         <h2>New Site Beta</h2>
-        <button onclick="window.open('https://mathpunch.us.to/', '_self');">Click Me</button>
+        <button onclick="window.location.href='https://mathpunch.us.to/';">Click Me</button>
 
         <h2>Prank Shortcut</h2>
-        <button onclick="window.open('https://www.icloud.com/shortcuts/4e9a1be2aace434981f58226805be72f', '_self');">Click Me</button>
+        <button onclick="window.location.href='https://www.icloud.com/shortcuts/4e9a1be2aace434981f58226805be72f';">Click Me</button>
     </div>
 
     <footer>
