--- a/index.html
+++ b/index.html
@@ -1,108 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>MathPunch - Home</title>
-  <link rel="icon" href="https://mathpunch.github.io/favicon.ico">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #fff;
-      color: #333;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    .container {
-      text-align: center;
-    }
-    h1 {
-      font-size: 2rem;
-    }
-    .game-links {
-      list-style-type: none;
-      padding: 0;
-    }
-    .game-links li {
-      margin: 10px 0;
-    }
-    .game-links a {
-      text-decoration: none;
-      color: #007BFF;
-      font-size: 1.2rem;
-    }
-    .game-links a:hover {
-      color: #0056b3;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MathPunch</title>
+    <style>
+        /* Apply font family to the entire body */
+        body {
+            font-family: 'Arial', sans-serif; /* Apply font to all text */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin: 0;
+            padding: 20px;
+            padding-bottom: 60px;
+            background-color: #1a1a1a;
+            color: white;
+        }
+
+        /* Specific style for the "Welcome To mathpunch V2" header */
+        h1 {
+            margin: 20px 0;
+            font-size: 1.5em; /* Make the welcome text smaller */
+            text-align: center;
+            white-space: nowrap;
+            font-family: 'Arial', sans-serif; /* Ensure font consistency */
+        }
+
+        /* Ensure all other text uses the same font */
+        h2, button, footer {
+            font-family: 'Arial', sans-serif; /* Apply the font family */
+        }
+
+        /* Button container styles */
+        .button-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            overflow-y: auto;
+            max-height: 80vh;
+            width: 100%;
+        }
+
+        button {
+            margin: 15px 0;
+            background-color: transparent;
+            color: white;
+            border: 2px solid white;
+            padding: 10px 20px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+            width: 100%;
+            max-width: 300px;
+        }
+
+        button:hover {
+            background-color: rgba(255, 255, 255, 0.1);
+        }
+
+        footer {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            padding: 10px;
+            text-align: center;
+            background-color: #1a1a1a;
+            color: white;
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Welcome to MathPunch</h1>
-    <p>Choose a game to play:</p>
-    <ul class="game-links">
-      <li><a href="/games/bitlife">Bitlife</a></li>
-      <li><a href="/games/stickmanhook">Stickman Hook</a></li>
-      <li><a href="/games/supermario64">Super Mario 64</a></li>
-      <li><a href="/games/tinyfishing">Tiny Fishing</a></li>
-      <li><a href="/games/taptapshots">Tap Tap Shots</a></li>
-      <li><a href="/games/drivemad">Drive Mad</a></li>
-      <li><a href="/games/emulatorjs">Emulator JS</a></li>
-      <li><a href="/games/wordleunlimited">Wordle Unlimited</a></li>
-      <li><a href="/games/fruitninja">Fruit Ninja</a></li>
-      <li><a href="/games/rooftopsnipers">Rooftop Snipers</a></li>
-      <li><a href="/games/tunnelrush">Tunnel Rush</a></li>
-      <li><a href="/games/burritobison">Burrito Bison</a></li>
-      <li><a href="/games/trashtrucksim">Trash Truck Sim</a></li>
-      <li><a href="/games/mariokart">Mario Kart</a></li>
-      <li><a href="/games/pokemonredfire">Pokemon Red Fire</a></li>
-      <li><a href="/games/legostarwars">LEGO Star Wars</a></li>
-    </ul>
-    <p>Explore more options:</p>
-    <ul class="game-links">
-      <li><a href="/ai/clickme">Click Me (AI)</a></li>
-      <li><a href="/requests/form">Submit a Request</a></li>
-      <li><a href="/adblocker/shortcut">Adblocker Shortcut</a></li>
-      <li><a href="/chat">Chat with MathPunch</a></li>
-      <li><a href="/backup">Backup Site</a></li>
-      <li><a href="/beta">Beta Site</a></li>
-      <li><a href="/prank/shortcut">Prank Shortcut</a></li>
-    </ul>
-    <p>Redirects:</p>
-    <ul class="game-links">
-      <li><a href="/games/bitlife">Redirect to Bitlife (200)</a></li>
-      <li><a href="/games/stickmanhook">Redirect to Stickman Hook (200)</a></li>
-      <li><a href="/games/supermario64">Redirect to Super Mario 64 (200)</a></li>
-      <li><a href="/games/tinyfishing">Redirect to Tiny Fishing (200)</a></li>
-      <li><a href="/games/taptapshots">Redirect to Tap Tap Shots (200)</a></li>
-      <li><a href="/games/drivemad">Redirect to Drive Mad (200)</a></li>
-      <li><a href="/games/emulatorjs">Redirect to Emulator JS (200)</a></li>
-      <li><a href="/games/wordleunlimited">Redirect to Wordle Unlimited (200)</a></li>
-      <li><a href="/games/fruitninja">Redirect to Fruit Ninja (200)</a></li>
-      <li><a href="/games/rooftopsnipers">Redirect to Rooftop Snipers (200)</a></li>
-      <li><a href="/games/tunnelrush">Redirect to Tunnel Rush (200)</a></li>
-      <li><a href="/games/burritobison">Redirect to Burrito Bison (200)</a></li>
-      <li><a href="/games/trashtrucksim">Redirect to Trash Truck Sim (200)</a></li>
-      <li><a href="/games/mariokart">Redirect to Mario Kart (200)</a></li>
-      <li><a href="/games/pokemonredfire">Redirect to Pokemon Red Fire (200)</a></li>
-      <li><a href="/games/legostarwars">Redirect to LEGO Star Wars (200)</a></li>
-    </ul>
-  </div>
-  <script>
-    // Redirect logic
-    const gameLinks = document.querySelectorAll('.game-links a');
-    gameLinks.forEach(link => {
-      link.addEventListener('click', function(event) {
-        event.preventDefault();
-        const href = this.getAttribute('href');
-        window.location.href = href;
-      });
-    });
-  </script>
+    <h1>Welcome To mathpunch V2</h1>
+    <div class="button-container">
+        <button onclick="window.location.href='https://mathpunch.github.io/panda/';">BitLife</button>
+        <button onclick="window.location.href='https://mathpunch.github.io/kitty/';">Stickmanhook</button>
+        <button onclick="window.location.href='https://mathpunch.github.io/dog/';">Super Mario 64</button>
+        <button onclick="window.location.href='https://mathpunch.github.io/bear/';">Tiny Fishing</button>
+        <button onclick="window.location.href='https://mathpunch.github.io/snake/';">Tap Tap Shots</button>
+        <button onclick="window.location.href='https://mathpunch.github.io/shark/';">Drive Mad</button>
+        <button onclick="window.location.href='https://mathpunch.github.io/zebra/';">Emulator JS</button>
+        <button onclick="window.location.href='https://mathpunch.github.io/turtle/';">Wordle Unlimited</button>
+        <button onclick="window.location.href='https://mathpunch.github.io/doggy/';">Fruit Ninja</button>
+        <button onclick="window.location.href='https://mathpunch.github.io/fox/';">Rooftop Snipers</button>
+        <button onclick="window.location.href='https://mathpunch.github.io/bat/';">Tunnel Rush</button>
+        <button onclick="window.location.href='https://mathpunch.github.io/wolf/';">Burrito Bison</button>
+        <button onclick="window.location.href='https://mathpunch.github.io/monkey/';">Trash Truck Simulator</button>
+
+        <h2>Games For Emulator JS</h2>
+        <button onclick="window.location.href='https://github.com/ixlmathgg/flashy/raw/main/Mario%20Kart.zip';">DS: Mario Kart</button>
+        <button onclick="window.location.href='https://github.com/ixlmathgg/Licky/raw/main/Pokemon%20Red%20Fire.zip';">GBA: Pokémon Red Fire</button>
+        <button onclick="window.location.href='https://github.com/mathpunch/didactic-fortnight/raw/refs/heads/main/LEGO%20Star%20Wars%20II.zip';">GBA: Lego Star Wars II</button>
+
+        <h2>MathPunch AI</h2>
+        <button onclick="window.location.href='https://mathpunch.github.io/crab';">Click Me</button>
+
+        <h2>Games Requests</h2>
+        <button onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLSc6PG1pB-SmSDqf_gJ_DYWV5HWFtGCcWpgGf2EaS0EpKcICqQ/viewform?usp=sf_link';">Click Me</button>
+
+        <h2>Adblocker</h2>
+        <button onclick="window.location.href='https://www.icloud.com/shortcuts/60f5af18cbfe435f886450e6a4c332e5';">Click Me</button>
+
+        <h2>Chatting</h2>
+        <button onclick="window.location.href='https://sites.google.com/view/mathpunch';">Click Me</button>
+
+        <h2>Backup Links</h2>
+        <button onclick="window.location.href='https://extramath.github.io/';">Click Me</button>
+
+        <h2>New Site Beta</h2>
+        <button onclick="window.location.href='https://mathpunch.us.to/';">Click Me</button>
+
+        <h2>Prank Shortcut</h2>
+        <button onclick="window.location.href='https://www.icloud.com/shortcuts/4e9a1be2aace434981f58226805be72f';">Click Me</button>
+    </div>
+
+    <footer>
+        Made By Ozzy
+    </footer>
 </body>
 </html>
